unpackaged/main/default/objects/OrderApi__Payment_Method__c/OrderApi__Payment_Method__c.object-meta.xml
<CustomObject>
    <description>Credit Card and E-Check tokens stored for accounts and contacts.</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Payment Method ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>