unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/DDApi__GoCardless_Connection__c.field-meta.xml
<CustomField>
    <fullName>DDApi__GoCardless_Connection__c</fullName>
    <description>** System Generated ** GoCardless connection related to the mandate on this payment method</description>
    <inlineHelpText>** System Generated ** GoCardless connection related to the mandate on this payment method</inlineHelpText>
    <label>GoCardless Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>