unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/DDApi__Is_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Is_Direct_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** Checked if this payment method has been used to checkout through direct debit payment option.</description>
    <inlineHelpText>** System Calculated ** Checked if this payment method has been used to checkout through direct debit payment option.</inlineHelpText>
    <label>Is Direct Debit</label>
    <type>Checkbox</type>
</CustomField>