unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/DDApi__Mandate_Id__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Mandate_Id__c</fullName>
    <description>** Conditionally Required ** Stores the Mandate Id reference generated from GoCardless.</description>
    <inlineHelpText>** Conditionally Required ** Stores the Mandate Id reference generated from GoCardless.</inlineHelpText>
    <label>Mandate Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>