unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Billing Account for the Payment Method if Entity = &quot;Account&quot;</description>
    <inlineHelpText>**System Calculated/Override** Link to the Billing Account for the Payment Method if Entity = &quot;Account&quot; otherwise the Billing Contact&#39;s Parent Account will be linked to the Payment Method.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>