unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__API_Response__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__API_Response__c</fullName>
    <description>**System Calculated** API Response from the callout to create/cancel a payment method.</description>
    <inlineHelpText>**System Calculated** API Response from the callout to create/cancel a payment method.</inlineHelpText>
    <label>API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>