unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_City__c</fullName>
    <description>Billing City for the customer&#39;s Payment Method.</description>
    <inlineHelpText>Billing City for the customer&#39;s Payment Method.</inlineHelpText>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>