unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_Country__c</fullName>
    <description>Billing Country for the customer&#39;s Payment Method.</description>
    <inlineHelpText>Billing Country for the customer&#39;s Payment Method.</inlineHelpText>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>