unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_Postal_Code__c</fullName>
    <description>Billing Postal Code for the customer&#39;s Payment Method.</description>
    <inlineHelpText>Billing Postal Code for the customer&#39;s Payment Method.</inlineHelpText>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>