unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Billing_State__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_State__c</fullName>
    <description>Billing State for the customer&#39;s Payment Method.</description>
    <inlineHelpText>Billing State for the customer&#39;s Payment Method.</inlineHelpText>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>