unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Billing_Street__c</fullName>
    <description>Billing Street for the customer&#39;s Payment Method.</description>
    <inlineHelpText>Billing Street for the customer&#39;s Payment Method.</inlineHelpText>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>