unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Card_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Card_Type__c</fullName>
    <description>**System API Calculated** Visa, MasterCard, American Express, etc...</description>
    <inlineHelpText>**System API Calculated** Visa, MasterCard, American Express, etc...</inlineHelpText>
    <label>Card Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>