unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the Billing Contact for the Payment Method.</description>
    <inlineHelpText>**System Calculated/Override** Link to the Billing Contact for the Payment Method.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>