unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Custom_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Custom_Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to the custom payment method associated with this payment method</description>
    <inlineHelpText>**System Calculated** Link to the custom payment method associated with this payment method</inlineHelpText>
    <label>Custom Payment Method</label>
    <referenceTo>OrderApi__Payment_Method__c</referenceTo>
    <relationshipLabel>Custom Payment Method</relationshipLabel>
    <relationshipName>Custom_Payment_Method</relationshipName>
    <type>Lookup</type>
</CustomField>