unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Custom_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Custom_Payment_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated** Link to the custom payment associated with this payment method</description>
    <inlineHelpText>**System Calculated** Link to the custom payment associated with this payment method</inlineHelpText>
    <label>Custom Payment Type</label>
    <referenceTo>OrderApi__Custom_Payment_Type__c</referenceTo>
    <relationshipLabel>Custom Payment Type</relationshipLabel>
    <relationshipName>Custom_Payment_Type</relationshipName>
    <type>Lookup</type>
</CustomField>