unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Customer__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer__c</fullName>
    <description>**System Calculated** Link to the customer&#39;s record, controlled by the &quot;Entity&quot; field.</description>
    <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id, OrderApi__Account__r.Name), HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Link to the customer&#39;s record, controlled by the &quot;Entity&quot; field.</inlineHelpText>
    <label>Customer</label>
    <type>Text</type>
</CustomField>