unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer_ID__c</fullName>
    <description>** System Calculated ** The Salesforce Record ID of the Contact or Account linked to the Payment Method.</description>
    <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Contact&quot;),OrderApi__Contact__c,OrderApi__Account__c)</formula>
    <inlineHelpText>** System Calculated ** The Salesforce Record ID of the Contact or Account linked to the Payment Method.</inlineHelpText>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>