unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>**System Calculated** The description of the customer payment method.</description>
    <formula>IF(ISBLANK( OrderApi__Number__c ),&quot;&quot;,&quot;- &quot;&amp;RIGHT(OrderApi__Number__c,7) )&amp;

            IF(ISBLANK( OrderApi__Card_Type__c ),&quot;&quot;,&quot; ...&quot; &amp; OrderApi__Card_Type__c)&amp;

            IF(OR(ISBLANK( OrderApi__Month__c ),ISBLANK( OrderApi__Year__c )), &quot;&quot;, &quot; (&quot; &amp; TEXT(OrderApi__Month__c) &amp; &quot;/&quot; &amp; TEXT(OrderApi__Year__c) &amp; &quot;)&quot;)</formula>
    <inlineHelpText>**System Calculated** The description of the customer payment method.</inlineHelpText>
    <label>Description</label>
    <type>Text</type>
</CustomField>