unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Exp_Date__c</fullName>
    <description>**System Calculated** Credit Card Expiration Date.</description>
    <formula>IF(OR(ISBLANK(OrderApi__Year__c), ISBLANK(OrderApi__Month__c)), NULL, IF(MONTH( DATE(VALUE(TEXT(OrderApi__Year__c)),VALUE(TEXT(OrderApi__Month__c)),1) ) = 12,DATE( YEAR( DATE(VALUE(TEXT(OrderApi__Year__c)),VALUE(TEXT(OrderApi__Month__c)),1) ), 12, 31 ),DATE( YEAR( DATE(VALUE(TEXT(OrderApi__Year__c)),VALUE(TEXT(OrderApi__Month__c)),1) ), MONTH ( DATE(VALUE(TEXT(OrderApi__Year__c)),VALUE(TEXT(OrderApi__Month__c)),1) ) + 1, 1 ) - 1 ))</formula>
    <inlineHelpText>**System Calculated** Credit Card Expiration Date.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>