unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__First_Six_Digits__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__First_Six_Digits__c</fullName>
    <description>The first six (6) digits of the payment method (credit card or bank account number).</description>
    <inlineHelpText>The first six (6) digits of the payment method (credit card or bank account number).</inlineHelpText>
    <label>First Six Digits</label>
    <length>6</length>
    <type>Text</type>
</CustomField>