unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System API Calculated** Checked when the Payment Method is deemed as a valid payment method by your Gateway (Payment Processor). Default checked.</description>
    <inlineHelpText>**System API Calculated** Checked when the Payment Method is deemed as a valid payment method by your Gateway (Payment Processor). Default checked.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>