unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Is_Declined__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the last transaction for the Payment Method was declined by your Payment Gateway. Default unchecked.</description>
    <inlineHelpText>Checked when the last transaction for the Payment Method was declined by your Payment Gateway. Default unchecked.</inlineHelpText>
    <label>Is Declined</label>
    <type>Checkbox</type>
</CustomField>