unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked if the Payment Method Type is Credit Card and Today&#39;s Date is past the Card Expiration Date. Default unchecked.</description>
    <inlineHelpText>**System Calculated** Checked if the Payment Method Type is Credit Card and Today&#39;s Date is past the Card Expiration Date. Default unchecked.</inlineHelpText>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>