unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Is_Restricted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restircts the payment methods display to only purchased items. Default unchecked.</description>
    <inlineHelpText>Restircts the payment methods display to only purchased items. Default unchecked.</inlineHelpText>
    <label>Is Restricted</label>
    <type>Checkbox</type>
</CustomField>