unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Is_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, payment method will not be displayed during checkout and credit card payment methods. Defaults unchecked.</description>
    <inlineHelpText>When checked, payment method will not be displayed during checkout and credit card payment methods. Defaults unchecked.</inlineHelpText>
    <label>Is Third Party</label>
    <type>Checkbox</type>
</CustomField>