unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Valid__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked when the Payment Method is deemed valid by your Payment Gateway otherwise unchecked. Default checked.</description>
    <inlineHelpText>Checked when the Payment Method is deemed valid by your Payment Gateway otherwise unchecked. Default checked.</inlineHelpText>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>