unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Last_Four_Digits__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Last_Four_Digits__c</fullName>
    <description>The last four (4) digits of the payment method (credit card or bank account number).</description>
    <inlineHelpText>The last four (4) digits of the payment method (credit card or bank account number).</inlineHelpText>
    <label>Last Four Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>