unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Month__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Month__c</fullName>
    <description>**System Calculated** MM value for the Credit Card Expiration Month.</description>
    <inlineHelpText>**System Calculated** MM value for the Credit Card Expiration Month.</inlineHelpText>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>