unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Number__c</fullName>
    <description>**System Calculated** Masked account number displaying X for all but the last four characters which are visible. Example: XXXX-XXXX-XXXX-1234</description>
    <inlineHelpText>**System Calculated** Masked account number displaying X for all but the last four characters which are visible. Example: XXXX-XXXX-XXXX-1234</inlineHelpText>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>