unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Override_Edit__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Override_Edit__c</fullName>
    <description>URL field that overrides the default behavior of edit. If this filed populated, user will be redirected to provided url</description>
    <inlineHelpText>URL field that overrides the default behavior of edit. If this filed populated, user will be redirected to provided url</inlineHelpText>
    <label>Override Edit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>