unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Payment_Method_Token__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method_Token__c</fullName>
    <description>**System API Calculated** API Token for the Payment Method.</description>
    <inlineHelpText>**System API Calculated** API Token for the Payment Method.</inlineHelpText>
    <label>Payment Method Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>