unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method_Type__c</fullName>
    <description>**System API Calculated** The type of payment method formatted for API transactions.</description>
    <inlineHelpText>**System API Calculated** The type of payment method formatted for API transactions.</inlineHelpText>
    <label>Payment Method Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>