unpackaged/main/default/objects/OrderApi__Payment_Method__c/fields/OrderApi__Year__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Year__c</fullName>
    <description>**System Calculated** YYYY value for the Credit Card Expiration Year.</description>
    <inlineHelpText>**System Calculated** YYYY value for the Credit Card Expiration Year.</inlineHelpText>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>