unpackaged/main/default/objects/OrderApi__Payment_Method__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Customer__c</columns>
    <columns>OrderApi__Payment_Method_Type__c</columns>
    <columns>OrderApi__Card_Type__c</columns>
    <columns>OrderApi__Number__c</columns>
    <columns>OrderApi__Exp_Date__c</columns>
    <columns>OrderApi__Payment_Method_Token__c</columns>
    <columns>OrderApi__Is_Valid__c</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>